# mmex_lib

./: .gitignore  AGENTS.md  Analicis_por_grok.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  build.rs  cifred_personal_finance.emb  cifred_personal_finance.emb_update_2026-02-25.bak  cp_of_personal_finance.mmb  cp_of_personal_finance.mmb_update_2026-03-11.bak  personal_finance.mmb  personal_finance.mmb_update_2026-02-26.bak  personal_finance.mmb_update_2026-02-27.bak  personal_finance.mmb_update_2026-03-11.bak  pyproject.toml  tables.sql  test_db.mmb
.github/workflows/: publish-maven.yml  publish-python.yml  publish-rust.yml  publish.yml
agent_logs/: REPORT_2026_02_25.md  TODO.md  crud_refinement_completed.md  deploy_crates_maven.md  new_error_system.md  opencode_ffi_implementation_plan.md  phase_five_completed.md  phase_five_uncompleted.md  phase_four_completed.md  phase_one_completed.md  phase_six_completed.md  phase_three_completed.md  phase_three_uncompleted.md  phase_two_completed.md
docs/: README.md  error_handling.md  python_distribution.md
docs-es/: CONTRIBUTING.md  README.md  documentation_plan.md
docs-es/architecture/: database_mapping.md  overview.md
docs-es/guides/: error_handling.md  getting_started_python.md
docs-es/roadmap/: future_features.md  status.md
docs/guides/: getting_started_python.md
examples/: README.md  example.js  example_1.rs  example_2.rs  example_3.rs  example_account.rs
examples/kotlin/: Main.kt
examples/kotlin/outputs/production/mmex_lib/: lib.rs
examples/kotlin/outputs/production/mmex_lib/api/: context.rs  ffi.rs  mod.rs
examples/kotlin/outputs/production/mmex_lib/domain/: error.rs  tags.rs  types.rs
examples/kotlin/outputs/production/mmex_lib/infrastructure/: currencies_repository.rs  mapper.rs  repositories.rs  splits_repository.rs  tags_repository.rs
examples/kotlin/outputs/production/mmex_lib/python/: main.py  mmex_lib.py
examples/kotlin/outputs/production/mmex_lib/services/: categories_service.rs  currencies_service.rs  mod.rs  stocks_service.rs  transaction_service.rs
examples/kotlin/uniffi/mmex_lib/: mmex_lib.kt
examples/python/: accounts_example.py  categories_example.py  main.py  mmex_lib.py  tags_example.py  transactions_example.py
kotlin/: build.gradle.kts  settings.gradle.kts
python/mmex_lib/: __init__.py  mmex_lib.py
python/mmex_lib/mmex_lib/: __init__.py  mmex_lib.py
python_bindings/: mmex_lib.py
src/: error.rs  lib.rs
src/api/: context.rs  ffi.rs  mod.rs
src/domain/: accounts.rs  assets.rs  categories.rs  currencies.rs  error.rs  mod.rs  models.rs  payees.rs  repositories.rs  scheduled_transactions.rs  stocks.rs  tags.rs  transactions.rs  types.rs
src/ffi/: accounts.rs  assets.rs  categories.rs  currencies.rs  engine.rs  mod.rs  payees.rs  raw.rs  scheduled.rs  stocks.rs  support.rs  tags.rs  transactions.rs
src/infrastructure/: assets_repository.rs  categories_repository.rs  currencies_repository.rs  db_executor.rs  mapper.rs  mod.rs  payees_repository.rs  repositories.rs  scheduled_repository.rs  splits_repository.rs  stocks_repository.rs  tags_repository.rs  transactions_repository.rs
src/services/: account_service.rs  asset_service.rs  categories_service.rs  currencies_service.rs  mod.rs  payees_service.rs  scheduled_service.rs  stocks_service.rs  support_service.rs  tags_service.rs  transaction_service.rs
tests/: assets_test.rs  balance_test.rs  categories_test.rs  common.rs  currencies_test.rs  integration_test.rs  payees_test.rs  scheduled_test.rs  splits_test.rs  stocks_test.rs  tags_test.rs  transaction_tags_test.rs  transactions_test.rs
