[package]
name = "mmex_lib"
version = "0.1.0"
edition = "2021"
authors = ["Patricio Rios"]
description = "Library for interacting with Money Manager EX data and logic"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Base de datos y SQL
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
sea-query = "0.32"
sea-query-rusqlite = "0.7"

# Tipos de datos y lógica
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# FFI Engines (Optional)
napi = { version = "2.12", default-features = false, features = ["serde-json"], optional = true }
napi-derive = { version = "2.12", optional = true }
uniffi = { version = "0.28", features = ["tokio"], optional = true }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[features]
default = []
uniffi = ["dep:uniffi"]
napi = ["dep:napi", "dep:napi-derive"]

[dev-dependencies]
tempfile = "3.10"
