[package]
name = "mmex_lib"
version = "0.1.0-beta.2"
edition = "2021"
authors = ["Patricio Rios"]
description = "Library for interacting with Money Manager EX data and logic"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mmex_lib"

[dependencies]
# Base de datos y SQL
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "bundled-sqlcipher-vendored-openssl"] }
sea-query = "0.32"
sea-query-rusqlite = "0.7"

# Tipos de datos y lógica
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

uniffi = { version = "0.31.0", features = [ "cli" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.31.0", features = [ "build" ] }

[package.metadata.maturin]
python-source = "python"
module-name = "mmex_lib.mmex_lib"
