[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mmex-lib"
version = "0.1.0b2"
description = "Python bindings for Money Manager EX database library"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Patricio Rios" }]
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mmex", "money-manager", "finance", "sqlite", "money-manager-ex"]

[project.urls]
Homepage = "https://github.com/PatricioRios/mmex_lib"
Repository = "https://github.com/PatricioRios/mmex_lib"
Documentation = "https://github.com/PatricioRios/mmex_lib#readme"
Issues = "https://github.com/PatricioRios/mmex_lib/issues"

[tool.maturin]
python-source = "python"
module-name = "mmex_lib.mmex_lib"
